# blocpress-render/src/main/java/io/github/flaechsig/blocpress/render/template/TemplateResource.java
@@ -1,10 +1,12 @@
 package io.github.flaechsig.blocpress.render.template;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.github.flaechsig.blocpress.core.LibreOfficeProcessor;
 import io.github.flaechsig.blocpress.core.OutputFormat;
 import io.github.flaechsig.blocpress.core.RenderEngine;
 import io.github.flaechsig.blocpress.render.api.TemplateApi;
+import io.github.flaechsig.blocpress.render.model.RenderRequest;
 import io.quarkus.security.Authenticated;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -32,11 +34,11 @@ import static io.github.flaechsig.blocpress.core.OutputFormat.RTF;
  */
 @Authenticated
 public class TemplateResource implements TemplateApi {
-    private static Logger logger = LoggerFactory.getLogger(TemplateResource.class);
-    private static ObjectMapper mapper = new ObjectMapper();
+    private final static Logger logger = LoggerFactory.getLogger(TemplateResource.class);
+    private final static ObjectMapper mapper = new ObjectMapper();
 
     @Override
-    public File generateDocument(String accept, InputStream templateInputStream, String data) {
+    public File renderDocumentMultipart(String accept, InputStream templateInputStream, String data) {
         logger.info("Generating document from template");
         OutputFormat format = switch (accept) {
             case "application/vnd.oasis.opendocument.text" -> ODT;
@@ -44,24 +46,45 @@ public class TemplateResource implements TemplateApi {
             case "application/rtf" -> RTF;
             default -> throw new IllegalStateException("Unexpected value: " + accept);
         };
-        Path tempFile = null;
-        Path output = null;
         try {
-            tempFile = Files.createTempFile("template", ".odt");
+            Path tempFile = Files.createTempFile("template", ".odt");
             Files.copy(templateInputStream, tempFile, StandardCopyOption.REPLACE_EXISTING);
-            var odt = tempFile.toUri().toURL();
             var json = mapper.readTree(data);
-            logger.info("Calling merge");
-            var merge = RenderEngine.mergeTemplate(odt, json);
-            logger.info("Calling transform");
-            var result = LibreOfficeProcessor.refreshAndTransform(merge,format);
-            logger.info("Build output");
-            output = Files.createTempFile("output",format.getSuffix());
-            Files.write(output, result);
-            return output.toFile();
+            return mergeAndTransform(tempFile, json, format);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+    }
+
+    @Override
+    public File renderDocumentJson(RenderRequest renderRequest) {
+        logger.info("Rendering document from base64-encoded template");
+        OutputFormat format = switch (renderRequest.getOutputType()) {
+            case PDF -> OutputFormat.PDF;
+            case RTF -> RTF;
+            case ODT -> ODT;
+        };
+        try {
+            Path tempFile = Files.createTempFile("template", ".odt");
+            Files.write(tempFile, renderRequest.getTemplate());
+            var json = mapper.valueToTree(renderRequest.getData());
+            return mergeAndTransform(tempFile, json, format);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+
+    private File mergeAndTransform(Path templatePath, JsonNode json, OutputFormat format) throws IOException {
+        var odt = templatePath.toUri().toURL();
+        logger.info("Calling merge");
+        var merge = RenderEngine.mergeTemplate(odt, json);
+        logger.info("Calling transform");
+        var result = LibreOfficeProcessor.refreshAndTransform(merge, format);
+        logger.info("Build output");
+        Path output = Files.createTempFile("output", format.getSuffix());
+        Files.write(output, result);
+        return output.toFile();
     }
 
 }
